versions/0.8.0/_sources/refs/_aws-cdk_assets.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"B4/NVAkBgdNLZmuyQOQvIahL1FATXWhpKOD6DkbhDD0="}

@aws-cdk/assets
===============

.. mdinclude:: ./__aws-cdk_assets.README.md

Reference
---------

.. py:module:: @aws-cdk/assets

Asset
^^^^^

.. py:class:: Asset(parent, id, props)

   An asset represents a local file or directory, which is automatically uploaded to S3 and then can be referenced within a CDK application.


   :extends: :py:class:`@aws-cdk/cdk.Construct`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/assets.GenericAssetProps`

   .. py:method:: grantRead([principal])

      Grants read permissions to the principal on the asset's S3 object.


      :param principal: 
      :type principal: :py:class:`@aws-cdk/aws-iam.IPrincipal` or undefined


   .. py:attribute:: s3BucketName

      Attribute that represents the name of the bucket this asset exists in.


      :type: :py:class:`@aws-cdk/aws-s3.BucketName` *(readonly)*


   .. py:attribute:: s3ObjectKey

      Attribute which represents the S3 object key of this asset.


      :type: :py:class:`@aws-cdk/aws-s3.ObjectKey` *(readonly)*


   .. py:attribute:: s3Url

      Attribute which represents the S3 URL of this asset.


      :type: :py:class:`@aws-cdk/aws-s3.S3Url` *(readonly)*


   .. py:attribute:: assetPath

      Resolved full-path location of this asset.


      :type: string *(readonly)*


AssetPackaging (enum)
^^^^^^^^^^^^^^^^^^^^^

.. py:class:: AssetPackaging

   .. py:data:: ZipDirectory

   .. py:data:: File


FileAsset
^^^^^^^^^

.. py:class:: FileAsset(parent, id, props)

   An asset that represents a file on disk.


   :extends: :py:class:`~@aws-cdk/assets.Asset`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/assets.FileAssetProps`

FileAssetProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: FileAssetProps



   .. py:attribute:: path

      File path.


      :type: string


   .. py:attribute:: readers

      A list of principals that should be able to read this file asset from S3. You can use `asset.grantRead(principal)` to grant read permissions later.


      :type: :py:class:`@aws-cdk/aws-iam.IPrincipal` or undefined


GenericAssetProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: GenericAssetProps



   .. py:attribute:: path

      The disk location of the asset.


      :type: string


   .. py:attribute:: packaging

      The packaging type for this asset.


      :type: :py:class:`~@aws-cdk/assets.AssetPackaging`


   .. py:attribute:: readers

      A list of principals that should be able to read this asset from S3. You can use `asset.grantRead(principal)` to grant read permissions later.


      :type: :py:class:`@aws-cdk/aws-iam.IPrincipal` or undefined


ZipDirectoryAsset
^^^^^^^^^^^^^^^^^

.. py:class:: ZipDirectoryAsset(parent, id, props)

   An asset that represents a ZIP archive of a directory on disk.


   :extends: :py:class:`~@aws-cdk/assets.Asset`
   :param parent: 
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/assets.ZipDirectoryAssetProps`

ZipDirectoryAssetProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: ZipDirectoryAssetProps



   .. py:attribute:: path

      Path of the directory.


      :type: string


   .. py:attribute:: readers

      A list of principals that should be able to read this ZIP file from S3. You can use `asset.grantRead(principal)` to grant read permissions later.


      :type: :py:class:`@aws-cdk/aws-iam.IPrincipal` or undefined


